[tool.poetry]
name = "lost-spc"
version = "0.2.1"
description = ""
authors = ["Philip Trauth <philip.trauth@ost.ch>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
matplotlib = "^3.9.2"
numpy = "^2.1.2"
pandas = "^2.2.3"
python = "^3.10"
scipy = "^1.14.1"

[tool.poetry.group.dev.dependencies]
basedpyright = "^1.21.0"
black = "^24.10.0"
complexipy = "^0.5.0"
flake8 = "^7.1.1"
flake8-pyproject = "^1.2.3"
hypothesis = "^6.115.3"
isort = "^5.13.2"
mkdocs-material = "^9.5.42"
mkdocstrings-python = "^1.11.1"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Testing
[tool.pytest.ini_options]
addopts = [
  "--cov-report=html",
  "--cov=lost_spc",
  "--junitxml=pytest-results.xml",
  "--doctest-modules",
  "--ff",
]

# Linting
[tool.flake8]
max-line-length = 100
exclude = [".git", "__pycache__"]
extend-ignore = ["E203"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
